# stb-34.101.31

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  belt.cpp  belt.hpp  main.cpp
.github/workflows/: ci.yml
include/belt/: belt.hpp
src/: aead.cpp  belt_internal.hpp  block.cpp  hash.cpp  hex.cpp  keyrep.cpp  keywrap.cpp  mac.cpp  modes.cpp  tables.cpp
tests/: test_vectors.cpp
tools/: belt_cli.cpp
